# axum-pokedex

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  info.txt
env/: .env  .mariadb.env  .mysql.env  .postgresql.env
src/: main.rs
src/configs/: env.rs  mod.rs  settings.rs
src/db/: mod.rs
src/db/auth/: mod.rs
src/db/items/: mod.rs
src/db/pokemons/: mod.rs
src/errors/: mod.rs
src/errors/auth/: mod.rs
src/middlewares/: cors.rs  mod.rs
src/models/: mod.rs  users.rs
src/models/auth/: mod.rs
src/models/main/: mod.rs
src/models/play/: mod.rs
src/models/pokemons/: mod.rs
src/models/web/: components.rs
src/routers/: mod.rs
src/routers/auth/: mod.rs
src/routers/fallback/: apis.rs
src/routers/pokemons/: mod.rs
src/routers/root/: apis.rs  mod.rs
src/routers/users/: apis.rs  mod.rs  models.rs
src/routers/users/auth/: apis.rs
src/routers/web/: mod.rs
src/routers/web/components/: apis.rs  mod.rs
src/schema/: mod.rs
src/services/: mod.rs  users.rs
src/services/auth/: mod.rs
src/services/pokemon/: mod.rs
src/services/web/: components.rs
src/utils/: db.rs  jwt.rs  mod.rs
tests/: auth.rs  quick_dev.rs
