[package]
name = "axum-pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.37" 
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
tower-http = { version = "0.5.2", features = [ "trace", "cors" ] }
tower-cookies = { version = "0.10" }
rand = "0.8.5"
thiserror = { version = "1.0.61" }
sqlx = { version = "0.7.3", features = [
    "runtime-async-std-native-tls",
    "rust_decimal",
    "mysql",
    "postgres",
    "migrate",
    "macros",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = { version = "0.15" }
jsonwebtoken = { version = "9.3.0" }
clap = { version = "4.5.4", features = ["derive", "env"] }
validator = { version = "0.18", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
lazy_static = { version = "1.5" }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.9"
